fix(dropdown): realign inline dropdown menu items

--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -525,6 +525,8 @@
 
   .#{$prefix}--dropdown--inline .#{$prefix}--dropdown-link {
     font-weight: normal;
+    margin-right: $spacing-sm;
+    margin-left: rem(10px);
   }
 
   // Skeleton State
